Update API specs, delete optional parameters and add user id when create a new entity
