# project2-api-pokemon/spring-server/src/main/java/ch/heig/amt/pokemon/api/endpoints/TrainersApiControllers.java
@@ -7,6 +7,7 @@ import ch.heig.amt.pokemon.api.model.Trainer;
 import ch.heig.amt.pokemon.api.model.TrainerWithId;
 import ch.heig.amt.pokemon.entities.TrainerEntity;
 import ch.heig.amt.pokemon.repositories.TrainerRepository;
+import ch.heig.amt.pokemon.repositories.UserRepository;
 import io.swagger.annotations.ApiParam;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -17,6 +18,7 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.context.request.NativeWebRequest;
 import org.springframework.web.servlet.support.ServletUriComponentsBuilder;
 
+import javax.servlet.http.HttpServletRequest;
 import javax.validation.Valid;
 import java.net.URI;
 import java.util.ArrayList;
@@ -28,9 +30,16 @@ public class TrainersApiControllers implements TrainersApi {
 
     @Autowired
     private TrainerRepository trainerRepository;
+    @Autowired
+    private UserRepository userRepository;
+    @Autowired
+    private HttpServletRequest request;
 
     public ResponseEntity<TrainerWithId> createTrainer(@ApiParam(value = "" ,required=true )  @Valid @RequestBody Trainer trainer) {
         TrainerEntity trainerEntity = toTrainerEntity(trainer);
+
+        trainerEntity.setIdUser((Integer)request.getAttribute("idUser"));
+
         TrainerEntity createdTrainerEntity = trainerRepository.save(trainerEntity);
 
         URI uri = ServletUriComponentsBuilder.fromCurrentRequest().path("/{id}").buildAndExpand(createdTrainerEntity.getTrainerId()).toUri();
@@ -53,7 +62,7 @@ public class TrainersApiControllers implements TrainersApi {
     }
 
 
-    public ResponseEntity<Void> deleteTrainers(@ApiParam(value = "name of the trainer to delete") @Valid @RequestParam(value = "name", required = false) String name,@ApiParam(value = "surname of the trainer to delete") @Valid @RequestParam(value = "surname", required = false) String surname,@ApiParam(value = "gender of the trainer to delete") @Valid @RequestParam(value = "gender", required = false) String gender,@ApiParam(value = "age of the trainer to delete") @Valid @RequestParam(value = "age", required = false) Integer age,@ApiParam(value = "number of badges of the trainer to delete") @Valid @RequestParam(value = "numberOfBadges", required = false) Integer numberOfBadges) {
+    public ResponseEntity<Void> deleteTrainers() {
         trainerRepository.deleteAll();
         return new ResponseEntity<>(HttpStatus.valueOf(204));
     }
@@ -71,17 +80,17 @@ public class TrainersApiControllers implements TrainersApi {
     }
 
 
-    public ResponseEntity<List<TrainerWithId>> getTrainers(@ApiParam(value = "name of the trainer to return") @Valid @RequestParam(value = "name", required = false) String name,@ApiParam(value = "surname of the trainer to return") @Valid @RequestParam(value = "surname", required = false) String surname,@ApiParam(value = "gender of the trainer to return") @Valid @RequestParam(value = "gender", required = false) String gender,@ApiParam(value = "age of the trainer to return") @Valid @RequestParam(value = "age", required = false) Integer age,@ApiParam(value = "number of badges of the trainer to return") @Valid @RequestParam(value = "numberOfBadges", required = false) Integer numberOfBadges) {
+    public ResponseEntity<List<TrainerWithId>> getTrainers() {
         List<TrainerWithId> trainers = new ArrayList<>();
         List<TrainerEntity> trainerEntities = new ArrayList<>();
 
         trainerEntities = (List<TrainerEntity>) trainerRepository.findAll();
 
-            for(TrainerEntity trainerEntity : trainerEntities) {
-                trainers.add(toTrainerWithId(trainerEntity));
-            }
+        for(TrainerEntity trainerEntity : trainerEntities) {
+            trainers.add(toTrainerWithId(trainerEntity));
+        }
 
-            return ResponseEntity.ok(trainers);
+        return ResponseEntity.ok(trainers);
     }
 
     public ResponseEntity<Void> updateTrainerById(@ApiParam(value = "The trainer ID",required=true) @PathVariable("id") Integer id,@ApiParam(value = "" ,required=true )  @Valid @RequestBody Trainer trainer) {
@@ -100,6 +109,7 @@ public class TrainersApiControllers implements TrainersApi {
     private TrainerWithId addID(int id, Trainer trainer){
         TrainerWithId trainerWithId = new TrainerWithId();
         trainerWithId.setId(id);
+        trainerWithId.setIdUser(trainer.getIdUser());
         trainerWithId.setSurname(trainer.getSurname());
         trainerWithId.setName(trainer.getName());
         trainerWithId.setNumberOfBadges(trainer.getNumberOfBadges());
@@ -113,6 +123,7 @@ public class TrainersApiControllers implements TrainersApi {
         TrainerWithId trainerWithId = new TrainerWithId();
 
         trainerWithId.setId(trainerEntity.getTrainerId());
+        trainerWithId.setIdUser(trainerEntity.getIdUser());
         trainerWithId.setAge(trainerEntity.getAge());
         trainerWithId.setGender(trainerEntity.getGender());
         trainerWithId.setName(trainerEntity.getName());
@@ -125,6 +136,7 @@ public class TrainersApiControllers implements TrainersApi {
     private TrainerEntity toTrainerEntity(Trainer trainer) {
         TrainerEntity trainerEntity = new TrainerEntity();
 
+        trainerEntity.setIdUser(trainer.getIdUser());
         trainerEntity.setAge(trainer.getAge());
         trainerEntity.setGender(trainer.getGender());
         trainerEntity.setName(trainer.getName());
@@ -138,6 +150,7 @@ public class TrainersApiControllers implements TrainersApi {
         TrainerEntity trainerEntity = new TrainerEntity();
 
         trainerEntity.setTrainerId(trainerWithId.getId());
+        trainerEntity.setIdUser(trainerWithId.getIdUser());
         trainerEntity.setAge(trainerWithId.getAge());
         trainerEntity.setGender(trainerWithId.getGender());
         trainerEntity.setName(trainerWithId.getName());
